--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.nextgis.maplibui">
+          package="com.nextgis.maplibui"
+    >
 
-    <application android:allowBackup="true"
-                 android:label="@string/app_name">
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        >
 
     </application>
 
