--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,10 +2,47 @@
           package="com.nextgis.maplibui"
     >
 
+        <uses-permission
+            android:name="android.permission.INTERNET"/>
+        <uses-permission
+            android:name="android.permission.READ_SYNC_SETTINGS"/>
+        <uses-permission
+            android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+        <uses-permission
+            android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         >
+
+        <service
+            android:name="com.nextgis.maplibui.services.NGWAuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+
+        <service
+            android:name="com.nextgis.maplibui.services.NGWSyncService"
+            android:exported="true"
+            android:process=":sync">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter"/>
+            </intent-filter>
+            <meta-data android:name="android.content.SyncAdapter"
+                       android:resource="@xml/syncadapter" />
+        </service>
+
+        <provider
+            android:name="com.nextgis.maplibui.datasource.NGWLayerContentProvider"
+            android:authorities="com.nextgis.ngw.provider"
+            android:exported="false"
+            android:syncable="true"/>
+
 
     </application>
 
