--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
         android:label="@string/app_name"
         >
 
+        <activity android:name=".NGWLoginActivity"
+                  android:label="@string/account_setup"/>
+
         <service
-            android:name="com.nextgis.maplibui.services.NGWAuthenticatorService">
+            android:name=".account.NGWAuthenticatorService">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator"/>
             </intent-filter>
