--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,14 +2,25 @@
           package="com.nextgis.maplibui"
     >
 
-        <uses-permission
-            android:name="android.permission.INTERNET"/>
-        <uses-permission
-            android:name="android.permission.READ_SYNC_SETTINGS"/>
-        <uses-permission
-            android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-        <uses-permission
-            android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"
+        />
+    <uses-feature
+        android:name="android.hardware.compass"
+        android:required="false"
+        />
+
 
     <application
         android:allowBackup="true"
@@ -18,6 +29,9 @@
 
         <activity android:name=".NGWLoginActivity"
                   android:label="@string/account_setup"/>
+
+        <activity android:name=".NGWSettingsActivity"
+                  android:label="@string/ngw_settings"/>
 
         <service
             android:name=".account.NGWAuthenticatorService">
@@ -30,7 +44,7 @@
         </service>
 
         <service
-            android:name="com.nextgis.maplibui.services.NGWSyncService"
+            android:name=".services.NGWSyncService"
             android:exported="true"
             android:process=":sync">
             <intent-filter>
@@ -41,7 +55,7 @@
         </service>
 
         <provider
-            android:name="com.nextgis.maplibui.datasource.NGWLayerContentProvider"
+            android:name=".datasource.NGWLayerContentProvider"
             android:authorities="com.nextgis.ngw.provider"
             android:exported="false"
             android:syncable="true"/>
