--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         </service>
 
         <provider
-            android:name=".datasource.NGWLayerContentProvider"
+            android:name="com.nextgis.maplib.datasource.NGWLayerContentProvider"
             android:authorities="${GisApplicationId}.ngw.provider"
             android:exported="false"
             android:syncable="true"/>
