Add set/change attributes dialog

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         <activity android:name=".NGWSettingsActivity"
                   android:label="@string/ngw_settings"/>
 
+        <activity android:name=".ModifyAttributesActivity"
+                  android:label="@string/set_attributes"/>
+
         <service
             android:name=".account.NGWAuthenticatorService">
             <intent-filter>
