--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.cocosw:undobar:1.+@aar'
     compile project(':maplib')
 }
