--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.cocosw:undobar:1.+@aar'
     compile project(':maplib')
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.cocosw:undobar:1.7.1'
 }
