--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile project(':maplib')
     compile 'com.cocosw:undobar:1.8.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.edmodo:rangebar:1.0.0'
 }
