--- a/build.gradle
+++ b/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.cocosw:undobar:1.8.1'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.edmodo:rangebar:1.0.0'
+    compile 'com.4ert:easypicker:0.1.1'
 }
