--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -70,6 +70,11 @@
             android:label="@string/layerSettings"
             />
 
+        <activity
+            android:name=".activity.NGWRasterLayerSettingsActivity"
+            android:label="@string/layerSettings"
+            />
+
         <service
             android:name=".account.NGWAuthenticatorService"
             android:enabled="true"
