Add icon and service in manifest, #255

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -104,6 +104,12 @@
              />
 
         <service
+            android:name="com.nextgis.maplibui.service.RebuildCacheService"
+            android:enabled="true"
+            android:exported="true"
+             />
+
+        <service
             android:process=":tracks"
             android:name="com.nextgis.maplibui.service.TrackerService"
             android:enabled="true"
