--- a/build.gradle
+++ b/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile 'com.edmodo:rangebar:1.0.0'
     compile 'com.4ert:easypicker:0.2.6.1'
     compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.github.yukuku:ambilwarna:2.0.1'
 }
