Add style settings to vector layer, fix #63

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         <activity
             android:name=".activity.TMSLayerSettingsActivity"
             android:label="@string/layerSettings"
+            android:windowSoftInputMode="stateHidden"
             />
 
         <service
