--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
         <activity
             android:name=".activity.NGWLoginActivity"
-            android:label="@string/account_setup"
+            android:label="@string/add_nextgis"
             />
 
         <activity
