Wrap attributes in WebView, let them be copyable, fix #422

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,98 +22,84 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.nextgis.maplibui"
-    >
+    package="com.nextgis.maplibui">
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-        >
+        android:label="@string/app_name">
 
         <activity
             android:name=".activity.NGWLoginActivity"
-            android:label="@string/add_nextgis"
-            />
+            android:label="@string/add_nextgis" />
 
         <activity
             android:name=".activity.NGWSettingsActivity"
-            android:label="@string/ngw_settings"
-            />
+            android:label="@string/ngw_settings" />
 
         <activity
             android:name=".activity.ModifyAttributesActivity"
             android:label="@string/set_attributes"
-            />
+            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".activity.FormBuilderModifyAttributesActivity"
             android:label="@string/set_attributes"
-            />
+            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".activity.TracksActivity"
-            android:label="@string/tracks"
-            />
+            android:label="@string/tracks" />
 
         <activity
             android:name=".activity.VectorLayerSettingsActivity"
             android:label="@string/layerSettings"
-            android:windowSoftInputMode="stateHidden"
-            />
+            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name=".activity.TMSLayerSettingsActivity"
             android:label="@string/layerSettings"
-            android:windowSoftInputMode="stateHidden"
-            />
+            android:windowSoftInputMode="stateHidden" />
 
         <service
             android:name=".account.NGWAuthenticatorService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator"/>
+                <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator"
-                />
+                android:resource="@xml/authenticator" />
         </service>
 
         <!-- android:process=":tile_download" -->
         <service
-            android:process=":tile_download"
             android:name="com.nextgis.maplibui.service.TileDownloadService"
             android:enabled="true"
             android:exported="true"
-            />
+            android:process=":tile_download" />
 
         <!-- android:process=":fill_layer" -->
         <service
             android:name="com.nextgis.maplibui.service.LayerFillService"
             android:enabled="true"
-            android:exported="true"
-             />
+            android:exported="true" />
 
         <service
             android:name="com.nextgis.maplibui.service.RebuildCacheService"
             android:enabled="true"
-            android:exported="true"
-             />
+            android:exported="true" />
 
         <service
-            android:process=":tracks"
             android:name="com.nextgis.maplibui.service.TrackerService"
             android:enabled="true"
             android:exported="true"
-            />
+            android:process=":tracks" />
 
         <service
             android:name="com.nextgis.maplibui.service.WalkEditService"
             android:enabled="true"
-            android:exported="true"
-            />
+            android:exported="true" />
 
     </application>
-
 </manifest>
