Fix track recording after reboot, fix #435

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -101,5 +101,14 @@
             android:enabled="true"
             android:exported="true" />
 
+        <receiver
+            android:name=".service.BootLoader"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 </manifest>
