--- a/build.gradle
+++ b/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile 'com.edmodo:rangebar:1.0.0'
     compile 'com.4ert:easypicker:0.2.7'
     compile 'com.github.yukuku:ambilwarna:2.0.1'
+    compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
 }
