--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
         <activity
             android:name=".activity.NGWLoginActivity"
+            android:windowSoftInputMode="stateHidden"
             android:label="@string/add_nextgis" />
 
         <activity
