Move NGW resource dialog to activity, fix #412

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -65,6 +65,11 @@
             android:label="@string/layerSettings"
             android:windowSoftInputMode="stateHidden" />
 
+        <activity
+            android:name=".activity.SelectNGWResourceActivity"
+            android:label="@string/accounts"
+            android:windowSoftInputMode="stateHidden" />
+
         <service
             android:name=".account.NGWAuthenticatorService"
             android:enabled="true"
