--- a/build.gradle
+++ b/build.gradle
@@ -46,14 +46,18 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':maplib')
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
     compile 'com.edmodo:rangebar:1.0.0'
     compile 'com.4ert:easypicker:0.2.9'
     compile 'com.github.yukuku:ambilwarna:2.0.1'
     compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
-    compile "com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0"
+    compile 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
 }
