--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':maplib')
-    compile 'com.edmodo:rangebar:1.0.0'
+    compile 'com.appyvet:materialrangebar:1.4'
     compile 'com.4ert:easypicker:0.2.12'
     compile 'com.github.yukuku:ambilwarna:2.0.1'
     compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
