--- a/build.gradle
+++ b/build.gradle
@@ -57,14 +57,14 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':maplib')
-    compile 'com.4ert:easypicker:0.2.12'
-    compile 'com.github.yukuku:ambilwarna:2.0.1'
-    compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
-    compile 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.android.support:preference-v7:27.1.1'
-    compile 'com.appyvet:materialrangebar:1.4'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':maplib')
+    implementation 'com.4ert:easypicker:0.2.12'
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
+    implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
+    implementation 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:preference-v7:27.1.1'
+    implementation 'com.appyvet:materialrangebar:1.4'
 }
