--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode 41
-        versionName '2.5.7.5'
+        versionCode 42
+        versionName '2.5.7.6'
         buildConfigField "String", "CLIENT_ID", "\"Im6GFdPPuPM09BnvFb3EacFZyq8TpRBSAAex7JDZ\""
     }
     productFlavors {
@@ -57,14 +57,14 @@ repositories {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(':maplib')
-    implementation 'com.4ert:easypicker:0.2.12'
-    implementation 'com.github.yukuku:ambilwarna:2.0.1'
-    implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
-    implementation 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:preference-v7:27.1.1'
-    implementation 'com.appyvet:materialrangebar:1.4'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':maplib')
+    compile 'com.4ert:easypicker:0.2.12'
+    compile 'com.github.yukuku:ambilwarna:2.0.1'
+    compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
+    compile 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:design:27.1.1'
+    compile 'com.android.support:preference-v7:27.1.1'
+    compile 'com.appyvet:materialrangebar:1.4'
 }
