--- a/build.gradle
+++ b/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     api 'com.android.support:design:28.0.0'
     api 'com.android.support:preference-v7:28.0.0'
     implementation 'com.appyvet:materialrangebar:1.4.6'
+    implementation 'com.hypertrack:hyperlog:0.0.10'
 }
