--- a/build.gradle
+++ b/build.gradle
@@ -52,10 +52,6 @@ android {
 repositories {
     mavenCentral()
     google()
-    jcenter()
-    maven {
-        url "https://dl.bintray.com/krazykira/maven"
-    }
     maven {
         url "https://jitpack.io"
     }
@@ -66,7 +62,7 @@ dependencies {
     api project(':maplib')
     api 'com.github.4eRTuk:easypicker:0.2.15'
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
-    implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
+    implementation 'com.github.damianocorrado:TimePickerDialog:1.0.4'
     implementation 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation('com.android.support:support-v4:28.0.0') {
@@ -74,6 +70,6 @@ dependencies {
     }
     api 'com.android.support:design:28.0.0'
     api 'com.android.support:preference-v7:28.0.0'
-    implementation 'com.appyvet:materialrangebar:1.4.6'
-    implementation 'com.hypertrack:hyperlog:0.0.10'
+    implementation 'com.github.oli107:material-range-bar:1.4.8'
+    implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
 }
