--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 30
-        versionCode 82
-        versionName '2.6.25'
+        versionCode 86
+        versionName '2.6.28'
         def props = new Properties()
         file("../local.properties").withInputStream { props.load(it) }
 
@@ -60,7 +60,7 @@ repositories {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api project(':maplib')
-    api 'com.github.4eRTuk:easypicker:0.2.17'
+    api 'com.github.4eRTuk:easypicker:downgrade-android-r-SNAPSHOT'
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
     implementation 'com.github.damianocorrado:TimePickerDialog:1.0.4'
     implementation 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
