--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
     implementation 'com.github.damianocorrado:TimePickerDialog:1.0.4'
     implementation 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
+    implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation('com.android.support:support-v4:28.0.0') {
         force = true
