--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue 'string', 'nextgis_accounts_auth', '"com.nextgis.account"'
+        }
+        debug {
+            minifyEnabled false
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue 'string', 'nextgis_accounts_auth', '"com.nextgis.account.debug"'
+            debuggable true
         }
     }
     compileOptions {
