--- a/build.gradle
+++ b/build.gradle
@@ -75,12 +75,12 @@ dependencies {
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
     implementation 'com.github.miguelbcr:TableFixHeaders-Wrapper:0.2.0'
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation('com.android.support:support-v4:28.0.0') {
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation('androidx.legacy:legacy-support-v4:1.0.0') {
         force = true
     }
-    api 'com.android.support:design:28.0.0'
-    api 'com.android.support:preference-v7:28.0.0'
+    api 'com.google.android.material:material:1.0.0'
+    api 'androidx.preference:preference:1.0.0'
     implementation 'com.github.oli107:material-range-bar:1.4.6'
     implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
 }
