--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 32
-        versionCode 95
-        versionName '2.6.45'
+        targetSdkVersion 33
+        versionCode 96
+        versionName '2.6.47'
         def props = new Properties()
         file("../local.properties").withInputStream { props.load(it) }
 
@@ -55,8 +55,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
