Search on feature table. And some more changes

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -58,7 +58,9 @@
 
         <activity
             android:name=".activity.AttributesActivity"
-            android:label="@string/attributes"/>
+            android:label="@string/attributes"
+            android:exported="true">
+        </activity>
 
         <activity
             android:name=".activity.VectorLayerSettingsActivity"
