--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,9 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 33
     defaultConfig {
         minSdkVersion 26
+        compileSdk 33
         targetSdkVersion 33
         def props = new Properties()
         file("../local.properties").withInputStream { props.load(it) }
